# api_spec/Macat-Macat-API-1.0.0-swagger.yaml
@@ -150,6 +150,19 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/SectionStructure"
+  /books:
+    get:
+      tags:
+        - open
+      responses:
+        "200":
+          description: A list of books is successfully returned
+          content:
+            "application/json":
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/BookOverview"
   "/book/{publicationURL}/overview":
     get:
       tags:
@@ -455,9 +468,11 @@ components:
           example: "9781912127764"
         synopsis:
           type: string
+          nullable: true
           example: The synopsis of the book
         overview:
           type: string
+          nullable: true
           example: The overview of the book
         id:
           type: string
